Выполнить задачу 3.1.5